# pi

./: .gitignore  README.md  pi.html  pyproject.toml
.github/workflows/: deploy.yml
src/pi_cli/: __init__.py  __main__.py  cli.py
