[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "pi-cli"
version = "0.1.0"
description = "A small CLI for printing pi to a requested number of decimal digits."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
pi = "pi_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pi_cli"]
